--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ yarn-debug.log*
 .yarn-integrity
 
 .idea
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
